--- a/WidgetIOS16/VietIntent/Info.plist
+++ b/WidgetIOS16/VietIntent/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>INIntentsSupported</key>
 	<array>
-		<string>VietIntent</string>
+		<string>SelectCategory</string>
 	</array>
 	<key>NSExtension</key>
 	<dict>
@@ -16,7 +16,7 @@
 			<array/>
 			<key>IntentsSupported</key>
 			<array>
-				<string>VietIntentIntent</string>
+				<string>SelectCategoryIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
