--- a/WidgetIOS16/WidgetIOS16/Info.plist
+++ b/WidgetIOS16/WidgetIOS16/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>NSUserActivityTypes</key>
 	<array>
-		<string>VietIntentIntent</string>
+		<string>SelectCategoryIntent</string>
 	</array>
 </dict>
 </plist>
